test: 테스트 컨벤션 통일